UPDATE encrypt and decrypt service file

--- a/service/encrypt.service
+++ b/service/encrypt.service
@@ -5,7 +5,7 @@ After=network-online.target
 [Service]
 Type=simple
 RemainAfterExit=yes
-ExecStart=/home/client/TP_Encrypt_Decrypt_Service/src/crypt.sh
+ExecStart=/bin/crypt.sh
 
 
 [Install]
