--- a/service/decrypt.service
+++ b/service/decrypt.service
@@ -5,7 +5,7 @@ After=network-online.target
 [Service]
 Type=simple
 RemainAfterExit=yes
-ExecStart=/home/client/TP_Encrypt_Decrypt_Service/src/decrypt.sh
+ExecStart=/bin/decrypt.sh
 
 [Install]
 WantedBy=multi-user.target
